Update 'wiyimvwg8-java-springboot' component image to: quay.io/rhtap-test-organization-jk/rhtap-qe:b827be662b1763a530171729ad680cb81ce735c6@sha256:e7fecff87fb2d59da72304bfea2f68e50a5d99ab8d72eddf6d34d6c367025698

--- a/components/wiyimvwg8-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/wiyimvwg8-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: wiyimvwg8-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap-test-organization-jk/rhtap-qe:b827be662b1763a530171729ad680cb81ce735c6@sha256:e7fecff87fb2d59da72304bfea2f68e50a5d99ab8d72eddf6d34d6c367025698
+          name: container-image
